# forum-rs

./: .env  Cargo.toml  Config.toml  bacon.toml  build.rs
frontend/: package.json  pnpm-lock.yaml
migrations/: 20260226102349_create_users_table.sql  20260227170911_create_sessions_table.sql  20260228083207_create_posts_table.sql
src/: auth.rs  config.rs  lib.rs  main.rs  session.rs  utils.rs
src/domain/post/: content.rs  slug.rs  title.rs
src/domain/user/: display_name.rs  password.rs  username.rs
src/models/post/: mod.rs  slug.rs  title.rs
src/models/user/: mod.rs  username.rs
src/routes/: guarded_test.rs  mod.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
src/routes/posts/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/routes/users/: delete.rs  get.rs  mod.rs  update.rs
src/session/: extract.rs  mod.rs
