[package]
name = "forum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
config = "0.15.19"
serde = "1.0.228"
sqlx = { version = "0.8.6", default-features = false, features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid"
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
