[package]
name = "forum"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.8"
axum-macros = "0.5.0"
chrono = "0.4.44"
config = "0.15.19"
serde = "1.0.228"
slug = "0.1.6"
sqlx = { version = "0.8.6", default-features = false, features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono"
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["normalize-path", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
unicode-segmentation = "1.12.0"
uuid = { version = "1.21.0", features = ["v4"] }
